# cpp-exercises

SS17/Aufgabe01/: CMakeLists.txt  CharacterChain.cpp  main.cpp
SS17/Aufgabe02/: CharacterChain.cpp
SS17/Aufgabe03/: CMakeLists.txt  main.cpp
SS17/Aufgabe03b/: CMakeLists.txt  Mitarbeiter.cpp  Person.cpp  Professor.cpp  Student.cpp  main.cpp
SS17/Aufgabe04/: CMakeLists.txt  Currency.cpp  CurrencyTable.cpp  main.cpp
SS17/Aufgabe04/data/: currencies.txt
SS17/Aufgabe05/: CMakeLists.txt  main.cpp
SS17/Aufgabe05/data/: data.txt
SS17/Aufgabe06/: CMakeLists.txt  Saint.cpp  SaintsCalender.cpp  main.cpp  saints.txt
SS17/Aufgabe06/basic_uitls/fstream_utils/: ifstream_utils.cpp  ifstream_utils.h
SS17/Aufgabe06/basic_uitls/string_utils/: string_utils.cpp  string_utils.h
SS17/Aufgabe07/: CMakeLists.txt  Canvas.cpp  Canvas.h  Mainframe.cpp  Mainframe.h  main.cpp
SS17/Aufgabe08/: CMakeLists.txt  Canvas.cpp  Canvas.h  Mainframe.cpp  Mainframe.h  main.cpp
SS17/Aufgabe09/: Ball.cpp  CMakeLists.txt  Canvas.cpp  Canvas.h  Mainframe.cpp  main.cpp
SS17/BouncyBall/: Ball.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Mainframe.cpp  Mainframe.h  main.cpp
SS17/BouncyBall/utils/: Vector2D.cpp  Vector2D.h
WS17/CPP_Sitzung10_Aufgaben/: AttributeToken.cpp  AttributeToken.h  CMakeLists.txt  Element.cpp  Element.h  Token.cpp  Token.h  data.xml  main.cpp  validation.dtd
WS17/CPP_Sitzung10_Aufgaben/IOColors/: definitions.h
WS17/CPP_Sitzung1_Aufgaben/MoneyCalculator/: CMakeLists.txt  main.cpp
WS17/CPP_Sitzung1_Aufgaben/MultiplicationTables/: CMakeLists.txt  main.cpp
WS17/CPP_Sitzung2_Aufgaben/charOccurrenceCounter/: CMakeLists.txt  main.cpp
WS17/CPP_Sitzung4_Aufgaben/languageChecker/: CMakeLists.txt  main.cpp
WS17/CPP_Sitzung4_Aufgaben/romanCalculator/: main.cpp
WS17/CPP_Sitzung6_Aufagben/Aufgabe1/: example5.cpp  rom5.h  romlib5.cpp
WS17/CPP_Sitzung6_Aufagben/Aufgabe2/: Person.cpp  Person.h  example5.cpp  person1.h  personlib1.cpp
WS17/CPP_Sitzung7_Aufgaben/: CMakeLists.txt  data.xml  main.cpp
WS17/CPP_Sitzung8_Aufgaben/: CMakeLists.txt  Person.cpp  Person.h  app.cpp  w7Data.txt
WS17/CPP_Sitzung9_Aufgaben/: CMakeLists.txt  attribute.cpp  attribute.h  data.xml  main.cpp  tags.txt  tagset.cpp  tagset.h  token.cpp  token.h
